--- a/scanner.html
+++ b/scanner.html
@@ -34,8 +34,8 @@
         border-radius: 5px;
       }
 
-      #imgCatalogue {
-        max-width: 30%;
+      #imgCondition {
+        max-width: 50%;
         height: 50px;
         position: absolute;
         top: 10px;
@@ -120,7 +120,6 @@
         border: 3px solid #363636;
       }
 
-      /* Timer styling */
       .timer {
         margin-top: 10px;
         font-size: 0.7em;
@@ -154,33 +153,6 @@
         background-color: #fac301;
       }
 
-      @keyframes shake {
-        0% {
-          transform: translate(-50%, -50%) translateX(-10px);
-        }
-        25% {
-          transform: translate(-50%, -50%) translateX(10px);
-        }
-        50% {
-          transform: translate(-50%, -50%) translateX(-10px);
-        }
-        75% {
-          transform: translate(-50%, -50%) translateX(10px);
-        }
-        100% {
-          transform: translate(-50%, -50%) translateX(0);
-        }
-      }
-
-      @keyframes fadeOut {
-        0% {
-          opacity: 1;
-        }
-        100% {
-          opacity: 0;
-        }
-      }
-
       #noArtifactImage {
         display: none;
         position: absolute;
@@ -190,7 +162,16 @@
         width: 300px;
         height: auto;
         z-index: 10;
-        animation: shake 1s ease-in-out infinite;
+        animation: fadeOut 3s ease-in-out infinite;
+      }
+
+      @keyframes fadeOut {
+        0% {
+          opacity: 1;
+        }
+        100% {
+          opacity: 0;
+        }
       }
     </style>
   </head>
@@ -205,10 +186,31 @@
       alt="No Artifact Found"
     />
 
+    <div
+      id="conditionLabel"
+      style="
+        position: absolute;
+        top: 90px;
+        font-family: Arial, sans-serif;
+        right: 10px;
+        color: white;
+        font-size: 12px;
+        font-weight: bold;
+        background-color: #fac301;
+        padding: 8px;
+        border-radius: 5px;
+        display: none;
+      "
+    >
+      Condition
+    </div>
+
     <img
-      id="imgCatalogue"
-      src="assets/catalogue/default.png"
+      id="imgCondition"
+      src="assets/condition/default.png"
       alt="Placeholder Image"
+      style="display: none"
+      ;
     />
 
     <!-- Floating Buttons -->
@@ -248,7 +250,8 @@
       const canvasContext = canvas.getContext("2d");
       const resultDiv = document.getElementById("result");
       const noArtifactImage = document.getElementById("noArtifactImage");
-      const imgElement = document.getElementById("imgCatalogue");
+      const imgCondition = document.getElementById("imgCondition");
+      const conditionLabel = document.getElementById("conditionLabel");
 
       let artifactInfo = "";
       let displayBox = true;
@@ -261,7 +264,8 @@
             video: { facingMode: "environment" },
           });
           video.srcObject = stream;
-          video.setAttribute("playsinline", true); // required to play video inline on iOS
+          // required to play video inline on iOS
+          video.setAttribute("playsinline", true);
           video.play();
           requestAnimationFrame(scanQRCode);
         } catch (error) {
@@ -405,6 +409,8 @@
             }
           } else {
             resultDiv.textContent = "No QR Code Detected";
+            conditionLabel.style.display = "none";
+            imgCondition.style.display = "none";
             document.getElementById("watchVideosButton").style.display = "none";
             artifactInfo = "";
           }
@@ -421,28 +427,29 @@
             if (data && Object.keys(data).length > 0) {
               // If artifact is found
               artifactInfo = `
-                    \nArtifact Name: ${data["Name"] || "N/A"}
-                    \n \nCatalogue Name: ${data["Catalogue Name"] || "N/A"}
-                    \nSubcatalogue Name: ${data["Subcatalogue Name"] || "N/A"}
+                    \n${data["Name"] || "N/A"}
+                    \n \nCatalogue: ${data["Catalogue Name"] || "N/A"}
+                    \nSubcatalogue: ${data["Subcatalogue Name"] || "N/A"}
                     \nDescription: ${data["Description"] || "N/A"}
                 `.trim();
+
               noArtifactImage.style.display = "none";
               displayBox = true;
+
+              //Show condition
+              let imageValue = data["Condition"] || "default";
+              changeImage(imageValue);
+
+              //Show result and button
               document.getElementById("result").style.display = "block";
               document.getElementById("watchVideosButton").style.display =
                 "block";
-              let imageValue = data["Catalogue Name"] || "default";
-              changeImage(imageValue);
             } else {
               // If artifact is not found
               artifactInfo = "";
+              displayBox = false;
               noArtifactImage.style.display = "block";
               resultDiv.textContent = `No artifact found`;
-              displayBox = false;
-              let imageValue = data["Catalogue Name"] || "default";
-              document.getElementById("result").style.display = "none";
-              document.getElementById("watchVideosButton").style.display =
-                "none";
 
               setTimeout(() => {
                 noArtifactImage.style.animation = "none";
@@ -452,14 +459,19 @@
                   noArtifactImage.style.opacity = 1;
                 }, 1000);
               }, 2000);
+
+              let imageValue = data["condition"] || "default";
+              document.getElementById("result").style.display = "none";
+              document.getElementById("watchVideosButton").style.display =
+                "none";
             }
           })
           .catch((error) => {
-            let imageValue = data["Catalogue Name"] || "default";
             document.getElementById("watchVideosButton").style.display = "none";
             console.error("Error fetching artifact info:", error);
             artifactInfo = "Error fetching artifact info";
-            noArtifactImage.style.display = "block";
+            conditionLabel.style.display = "none";
+            imgCondition.style.display = "none";
           });
       }
 
@@ -484,27 +496,32 @@
         }, 1000);
       }
 
+      // Change the image according to the condition
       function changeImage(value) {
-        if (value === "Traditional wood arts") {
-          imgElement.src = "assets/catalogue/1.png";
-        } else if (value === "Contemporary wood arts") {
-          imgElement.src = "assets/catalogue/2.png";
-        } else if (value === "Gongs and drums") {
-          imgElement.src = "assets/catalogue/3.png";
-        } else if (value === "Flute (nose and mouth)") {
-          imgElement.src = "assets/catalogue/4.png";
-        } else if (value === "Tambi (bamboo stringed percussion)") {
-          imgElement.src = "assets/catalogue/5.png";
-        } else if (value === "Food containers and storage bins") {
-          imgElement.src = "assets/catalogue/6.png";
+        if (value.includes("No problem")) {
+          imgCondition.src = "/assets/condition/no_problem.png";
+        } else if (
+          value.includes("crack") ||
+          value.includes("cracks") ||
+          value.includes("breakage") ||
+          value.includes("broken")
+        ) {
+          imgCondition.src = "/assets/condition/with_breakage.png";
+        } else if (value.includes("holes") || value.includes("hole")) {
+          imgCondition.src = "assets/condition/holes.png";
+        } else if (value.includes("rotten") || value.includes("rot")) {
+          imgCondition.src = "assets/condition/rotten.png";
         } else {
-          imgElement.src = "assets/catalogue/default.png"; // Default image
+          imgCondition.src = "assets/condition/default.png";
         }
+
+        conditionLabel.style.display = "block";
+        imgCondition.style.display = "block";
       }
 
+      // The page was loaded from the bfcache (back-forward cache)
       window.addEventListener("pageshow", (event) => {
         if (event.persisted) {
-          // The page was loaded from the bfcache (back-forward cache)
           window.location.reload();
         }
       });
