--- a/about.html
+++ b/about.html
@@ -53,11 +53,11 @@
           </div>
           <ul class="links">
             <li>
-              <a href="homepage.html" class="close-nav"
+              <a href="scanner.html" class="close-nav"
                 ><i class="fa fa-chevron-circle-left"></i
               ></a>
             </li>
-            <li><a href="homepage.html">Home</a></li>
+            <li><a href="scanner.html">Home</a></li>
             <li><a href="igorot-dances.html">Igorot Dances</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="index.html">Log out</a></li>
