--- a/scanner.html
+++ b/scanner.html
@@ -111,9 +111,9 @@
         background-image: url("./assets/img/info_box.png");
         background-size: cover;
         background-position: center;
-        width: 0%;
-        max-width: 500px;
+        width: 100%;
         padding: 30px;
+        align-self: center;
         border-radius: 20px;
         text-align: center;
         box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
