--- a/igorot-dances.html
+++ b/igorot-dances.html
@@ -138,6 +138,7 @@
                                                    title="Watch preview"
                                                    class="btn btn-radius btn-focus"><i
                                                             class="fa fa-play mr-2"></i>Watch preview</a>
+
                                     </div>
                                     <h2 class="heading-name"><a
             href="#">Igorot Dances</a></h2>
@@ -494,6 +495,7 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/5.1.1/lazysizes.min.js"
         async></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>        
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/5.1.1/lazysizes.min.js"
         async></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/postscribe/2.0.8/postscribe.min.js"></script>
