edit admin, video player UI

--- a/igorot-dances.html
+++ b/igorot-dances.html
@@ -12,6 +12,10 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css">
 <link rel="stylesheet" href="res\css\dances.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.10/vue.min.js"></script>    
+<link
+    href="https://fonts.googleapis.com/css?family=Inter"
+    rel="stylesheet"
+    />
 </head>
 <body>
 <div id="app">    
