--- a/about.html
+++ b/about.html
@@ -12,6 +12,10 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     >
     <link
+    href="https://fonts.googleapis.com/css?family=Inter"
+    rel="stylesheet"
+  />
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     >
