--- a/admin/admin.html
+++ b/admin/admin.html
@@ -10,6 +10,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.5.0-beta4/html2canvas.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.4/jspdf.min.js"></script>
     <script src="../res/js/admin/javascript.js"></script>
+    <link
+    href="https://fonts.googleapis.com/css?family=Inter"
+    rel="stylesheet"
+  />
 </head>
 
 <body>
@@ -95,6 +99,8 @@
                             <select id="editSubcatalog" name="subcatalog"></select><br>
                             <label for="description">Description:</label>
                             <textarea id="editDescription" name="description"></textarea><br>
+                            <label for="description">Virtual Avatar Script:</label>
+                            <textarea id="editScript" name="script"></textarea><br>
                             <button type="button" onclick="saveChanges()">Save</button>
                         </form>
                     </div>
