--- a/guest-login.html
+++ b/guest-login.html
@@ -10,6 +10,10 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css"
       rel="stylesheet"
     />
+    <link
+    href="https://fonts.googleapis.com/css?family=Inter"
+    rel="stylesheet"
+  />
     <link rel="icon" href="assets/img/favicon.png" type="image/x-icon" />
     <link href="assets/img/favicon.png" rel="icon" />
   </head>
