--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <title>SLU Museum</title>
   <link rel="stylesheet" href="res/css/styles.css">
   <link rel="icon" href="assets/img/favicon.png" type="image/x-icon">
+  <link
+  href="https://fonts.googleapis.com/css?family=Inter"
+  rel="stylesheet"
+/>
 </head>
 <body class="welcome-body">
 <header class="banner">
