--- a/video-player.html
+++ b/video-player.html
@@ -15,6 +15,10 @@
         <link rel="stylesheet" href="res/css/video-player.css">
         <!--End: Stylesheet-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.10/vue.min.js"></script>
+        <link
+        href="https://fonts.googleapis.com/css?family=Inter"
+        rel="stylesheet"
+      />
     </head>
     <body>
         <div id="app">
