--- a/generateQR.html
+++ b/generateQR.html
@@ -1,58 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>QR Code Generator</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.qrcode/1.0/jquery.qrcode.min.js"></script>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding: 20px;
-    }
-    #qrcode {
-      margin-top: 20px;
-    }
-    .download-btn {
-      display: none;
-      margin-top: 10px;
-    }
-  </style>
-</head>
-<body>
-<h1>QR Code Generator</h1>
-<input type="text" id="valueInput" placeholder="Enter value (e.g., ArtifactID)">
-<button onclick="generateQRCode()">Generate QR Code</button>
-<div id="qrcode"></div>
-<a id="downloadLink" class="download-btn" download="qrcode.png">Download QR Code</a>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>QR Code Generator</title>
+    <link rel="icon" href="assets\img\favicon.png" type="image/x-icon" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.qrcode/1.0/jquery.qrcode.min.js"></script>
+    <style>
+      @font-face {
+        font-family: "OldStandard";
+        src: url("path/to/your/OldStandard.ttf") format("truetype");
+        font-weight: normal;
+        font-style: normal;
+      }
 
-<script>
-  function generateQRCode() {
-    var value = document.getElementById('valueInput').value;
-    if (value) {
-      $('#qrcode').empty();
+      h1 {
+        margin-top: 50px;
+        margin-bottom: 50px;
+      }
 
-      $('#qrcode').qrcode({
-        text: value,
-        width: 200,
-        height: 200
-      });
+      body {
+        font-family: "OldStandard", serif;
+        text-align: center;
+        padding: 20px;
+        background-image: url("../../assets/img/homepage_background.png");
+        background-size: cover;
+        background-repeat: repeat;
+        background-attachment: fixed;
+      }
 
-      setTimeout(() => {
-        var qrCodeCanvas = document.querySelector('#qrcode canvas');
-        if (qrCodeCanvas) {
-          var dataURL = qrCodeCanvas.toDataURL('image/png');
-          var downloadLink = document.getElementById('downloadLink');
-          downloadLink.href = dataURL;
-          downloadLink.style.display = 'block';
+      #qrcode {
+        margin-top: 40px;
+      }
+
+      .download-btn {
+        display: none;
+        margin-top: 10px;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>SLU Museum QR Code Generator</h1>
+    <input
+      type="text"
+      id="valueInput"
+      placeholder="Enter value (e.g., ArtifactID)"
+    />
+    <button onclick="generateQRCode()">Generate QR Code</button>
+    <div id="qrcode"></div>
+    <a id="downloadLink" class="download-btn" download="qrcode.png"
+      >Download QR Code</a
+    >
+
+    <script>
+      function generateQRCode() {
+        var value = document.getElementById("valueInput").value;
+        if (value) {
+          $("#qrcode").empty();
+
+          $("#qrcode").qrcode({
+            text: value,
+            width: 200,
+            height: 200,
+          });
+
+          setTimeout(() => {
+            var qrCodeCanvas = document.querySelector("#qrcode canvas");
+            if (qrCodeCanvas) {
+              var dataURL = qrCodeCanvas.toDataURL("image/png");
+              var downloadLink = document.getElementById("downloadLink");
+              downloadLink.href = dataURL;
+              downloadLink.style.display = "block";
+            }
+          }, 100);
+        } else {
+          alert("Please enter a value.");
         }
-      }, 100);
-    } else {
-      alert('Please enter a value.');
-    }
-  }
-</script>
-</body>
+      }
+    </script>
+  </body>
 </html>
