edit generateQR page

--- a/generateQR.html
+++ b/generateQR.html
@@ -1,83 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>QR Code Generator</title>
-    <link rel="icon" href="assets\img\favicon.png" type="image/x-icon" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.qrcode/1.0/jquery.qrcode.min.js"></script>
-    <style>
-      @font-face {
-        font-family: "OldStandard";
-        src: url("path/to/your/OldStandard.ttf") format("truetype");
-        font-weight: normal;
-        font-style: normal;
-      }
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>QR Code Generator</title>
+  <link rel="icon" href="assets/img/favicon.png" type="image/x-icon" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Jomolhari&display=swap" rel="stylesheet"> <!-- Add Jomolhari font -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.qrcode/1.0/jquery.qrcode.min.js"></script>
+  <style>
+    body {
+      font-family: 'Inter', sans-serif; /* Set Inter as the default font */
+      text-align: center;
+      padding: 20px;
+      background-image: url("../../assets/img/homepage_background.png");
+      background-size: cover;
+      background-repeat: repeat;
+      background-attachment: fixed;
+    }
 
-      h1 {
-        margin-top: 50px;
-        margin-bottom: 50px;
-      }
+    h1 {
+      font-family: 'Jomolhari', serif; /* Set Jomolhari for the h1 element */
+      margin-top: 50px;
+      margin-bottom: 50px;
+    }
 
-      body {
-        font-family: "OldStandard", serif;
-        text-align: center;
-        padding: 20px;
-        background-image: url("../../assets/img/homepage_background.png");
-        background-size: cover;
-        background-repeat: repeat;
-        background-attachment: fixed;
-      }
+    #qrcode {
+      margin-top: 40px;
+    }
 
-      #qrcode {
-        margin-top: 40px;
-      }
+    .input-container {
+      display: flex;
+      justify-content: center; /* Center align input and button */
+      margin-bottom: 20px; /* Space below the input/button */
+    }
 
-      .download-btn {
-        display: none;
-        margin-top: 10px;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>SLU Museum QR Code Generator</h1>
-    <input
-      type="text"
-      id="valueInput"
-      placeholder="Enter value (e.g., ArtifactID)"
-    />
+    input[type="text"] {
+      padding: 12px;
+      margin-right: 10px; /* Space between input and button */
+      border: 3px solid #0E1644;
+      border-radius: 10px;
+      outline: none;
+      font-size: 20px;
+      background-color: #ffffffa8;
+      color: #0E1644;
+      text-align: center;
+      width: 160px;
+    }
+
+    button {
+      height: 50px;
+      background-color: #0E1644;
+      color: #FFFFFF;
+      border: none;
+      padding: 12px 20px;
+      cursor: pointer;
+      border-radius: 20px;
+      font-size: 16px;
+      transition: background-color 0.3s ease-in-out;
+    }
+
+    button:hover {
+      background-color: #FAC301;
+      color: #0E1644;
+      font-weight: bold;
+      border: 1.25px solid #0E1644;
+    }
+
+    .download-btn {
+      display: none;
+      background-color: #0E1644;
+      color: #FFFFFF;
+      border: none;
+      padding: 12px 20px;
+      cursor: pointer;
+      border-radius: 20px;
+      font-size: 16px;
+      text-decoration: none;
+      transition: background-color 0.3s ease-in-out;
+      margin-top: 20px;
+      width: 180px;
+    }
+
+    .download-btn:hover {
+      background-color: #FAC301;
+      color: #0E1644;
+      font-weight: bold;
+      border: 1.25px solid #0E1644;
+    }
+
+    .button-container {
+      display: flex;
+      justify-content: center; 
+      margin-top: 20px;
+    }
+
+  </style>
+</head>
+<body>
+  <h1>SLU Museum QR Code Generator</h1>
+  <div class="input-container">
+    <input type="text" id="valueInput" placeholder="Enter ArtifactID" />
     <button onclick="generateQRCode()">Generate QR Code</button>
-    <div id="qrcode"></div>
-    <a id="downloadLink" class="download-btn" download="qrcode.png"
-      >Download QR Code</a
-    >
+  </div>
+  <div id="qrcode"></div>
+  <div class="button-container">
+    <a id="downloadLink" class="download-btn" download="qrcode.png">Download QR Code</a>
+  </div>
 
-    <script>
-      function generateQRCode() {
-        var value = document.getElementById("valueInput").value;
-        if (value) {
-          $("#qrcode").empty();
+  <script>
+    function generateQRCode() {
+      var value = document.getElementById("valueInput").value;
+      if (value) {
+        $("#qrcode").empty();
 
-          $("#qrcode").qrcode({
-            text: value,
-            width: 200,
-            height: 200,
-          });
+        $("#qrcode").qrcode({
+          text: value,
+          width: 400,
+          height: 400,
+        });
 
-          setTimeout(() => {
-            var qrCodeCanvas = document.querySelector("#qrcode canvas");
-            if (qrCodeCanvas) {
-              var dataURL = qrCodeCanvas.toDataURL("image/png");
-              var downloadLink = document.getElementById("downloadLink");
-              downloadLink.href = dataURL;
-              downloadLink.style.display = "block";
-            }
-          }, 100);
-        } else {
-          alert("Please enter a value.");
-        }
+        setTimeout(() => {
+          var qrCodeCanvas = document.querySelector("#qrcode canvas");
+          if (qrCodeCanvas) {
+            var dataURL = qrCodeCanvas.toDataURL("image/png");
+            var downloadLink = document.getElementById("downloadLink");
+            downloadLink.href = dataURL;
+            downloadLink.style.display = "block";
+          }
+        }, 100);
+      } else {
+        alert("Please enter a value.");
       }
-    </script>
-  </body>
+    }
+  </script>
+</body>
 </html>
