--- a/ht.html
+++ b/ht.html
@@ -1,9 +1,3 @@
-<?php
-session_start();
-if (is_null($_SESSION["guest"])) {
-  header("Location: ../guest-login.php");
-}
-?>
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -29,10 +23,10 @@ if (is_null($_SESSION["guest"])) {
           <a class="nav-link" href="scanner.php" title="Home">Home</a>
         </li>
         <li class="nav-item">
-        <a class="nav-link" href="igorot-dances.php" title="Igorot-Dances">Igorot Dances</a>
+        <a class="nav-link" href="igorot-dances.php" title="Home">Igorot Dances</a>
        </li>
         <li class="nav-item">
-          <a class="nav-link" href="about.php" title="About">About</a>
+          <a class="nav-link" href="about.php" title="Home">About</a>
         </li>
         <div class="clearfix"></div>
     </div>
